--- a/pireucartofi.html
+++ b/pireucartofi.html
@@ -36,13 +36,13 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
       <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   </head>
   <body>
-  
+
 <div class="row">
    <div class="col s12 m7">
      <div class="card">
        <div class="card-image">
          <img src="images/sample-1.jpg">
-         <span class="card-title">Card Title</span>
+         <span class="card-title">Piure de cartofi</span>
        </div>
        <div class="card-content">
          <p>I am a very simple card. I am good at containing small bits of information.
