Updated muffin receipe

--- a/briose.html
+++ b/briose.html
@@ -40,12 +40,33 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
    <div class="col s12 m7">
      <div class="card">
        <div class="card-image">
-         <img src="images/sample-1.jpg">
-         <span class="card-title">Card Title</span>
+         <img src="http://www.e-retete.ro/imagini/retete/muffins-cu-afine.jpg">
+         <span class="card-title">Muffins cu afine</span>
        </div>
        <div class="card-content">
-         <p>I am a very simple card. I am good at containing small bits of information.
-         I am convenient because I require little markup to use effectively.</p>
+         <p>Ingrediente:
+
+230 gr faina
+230 gr zahar
+1 varf cutit sare
+2 lingurite praf de copt
+3 oua
+200 ml lapte batut
+100 gr unt
+1 esenta vanilie
+250 gr afine
+inca putin unt topit pentru uns formele
+Bucati: 14
+Preparare
+Muffins cu afine
+Topim untul si il lasam sa se raceasca.
+Amestecam faina, zaharul, sarea si praful de copt.
+Batem cu mixerul iaurtul, ouale, vanilia si untul topit (racit obligatoriu altfel faceti omleta!).
+Turnam amestecul de faina si zahar (de la pct. 2) peste cel de oua si iaurt (de la pct. 3) si continuam sa mixam inca 2 minute.
+Incorporam in aluat afinele (pe care le scurgeti bine de apa dupa ce le-ati spalat, le puteti absorbi si cu un servetel sa fiti siguri!).
+*mie mi s-au cam dus la fund afinele, ca sa impiedicati asta dati-le inainte de a le amesteca in prin putina faina.
+In tava de muffins aseazam forme de muffins de hartie si le ungem cu fff putin unt topit. Turnam in fiecare forma aluat.
+Dam la cuptor la 180C pentru 25 minute. Lasam sa se racoreasca si apoi le scoatem din forme.</p>
        </div>
        <div class="card-action">
          <a href="#">This is a link</a>
