--- a/cheesecake.html
+++ b/cheesecake.html
@@ -42,42 +42,11 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
      <div class="card">
        <div class="card-image">
          <img src="http://www.e-retete.ro/imagini/retete/cheesecake-cu-ciocolata.jpg">
-         <span class="card-title">Cheesecake cu ciocolata</span>
+         <span class="card-title">Card Title</span>
        </div>
        <div class="card-content">
-         <p>Ingrediente
-
-Umplutura:
-
-900 gr crema de branza (tip philadelphia)
-200 gr zahar
-1/2 baton vanilie
-100 gr smantana acra
-4 oua
-80 gr ciocolata neagra (75 %)
-1 priza scortisoara
-Crusta
-200 gr biscuiti cu cacao (am folosit Belvita Start cu ciocolata)
-90 gr unt
-1 priza scortisoara
-
-Preparare:
-
-Se maruntesc biscuitii in robot sau masina de cafea. Se adauga untul topit si scortisoara si se amesteca bine pana biscuitii sunt umezi.
-Se tapeteaza fundul unei tavi cu pereti detasabili (diametru 26 cm; cu hartie de copt pe fund) cu biscuiti (apasati usor pe margini sa se formeze o mica bordura). Se da tava la rece pana pregatim umplutura.
-Se freaca branza un pic pana se inmoaie. Se adauga zaharul si miezul de la batonul de vanilie (sau zahar vanilat; sau esenta de vanilie) si se mai amesteca inca 2-3 minute. Se adauga smantana.
-Se adauga apoi cate un ou pe rand pana sunt complet incorporate.
-Se toarna 2/3 din amestec in tava, peste crusta de biscuiti. Se loveste usor tava de masa ca sa se aseze uniform umplutura.
-Se topeste pe abur (sau in microunde) ciocolata. Se adauga restul de umplutura in ciocolata (la inceput puneti putina umplutura si amestecati bine, apoi dupa ce ati adaugat 2-3 linguri puteti sa o adaugati pe toata o data). Omogenizati, adaugand si scortisoara.
-* atentie! umplutura se adauga in ciocolata topita si nu invers!
-Puneti umplutura cu ciocolata intr-un spritz de patiserie la care montati un varf rotund si destul de subtire.
-Introduceti usor varful in umplutura (cativa mm) si strangeti pana vedeti ca la suprafata s-a format un cerc cam cat o moneda de 10 bani. Continuati sa formati buline pe toata suprafata cheesecake-ului.
-* eu am facut prima bulina in centru, apoi am facut pe marginea exterioara si la final am mai intercalat cateva buline intre ele.
-Dati tava la cuptor, la 150C. In cuptor, cand il incalziti, chiar jos asezati o tava cu apa (ca sa se faca aburi). Coaceti cheesecakeul timp de 1 ora.
-Stingeti focul si lasati-l sa se raceasca in cuptor.
-Introduceti-l la frigider si lasati-l peste noapte.
-* eu n-am avut rabdare si l-am taiat dupa 5 ore si era ok
-Se feliaza usor cu un cutit trecut prin apa fierbinte.</p>
+         <p>I am a very simple card. I am good at containing small bits of information.
+         I am convenient because I require little markup to use effectively.</p>
        </div>
        <div class="card-action">
          <a href="#">This is a link</a>
