update muffin picture

--- a/briose.html
+++ b/briose.html
@@ -40,7 +40,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
    <div class="col s12 m7">
      <div class="card">
        <div class="card-image">
-         <img src="https://www.google.ro/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwj347y0lqHPAhWL7hoKHePkAlMQjRwIBw&url=https%3A%2F%2Fbananachocolate.wordpress.com%2F2013%2F08%2F30%2Fbriose-cu-urda-lamaie-si-afine-also-in-english%2F&bvm=bv.133387755,d.bGs&psig=AFQjCNHAsA12rDA9OLUeBVjmY_Vze6AVlg&ust=1474571245721562">
+         <img src="https://bananachocolate.files.wordpress.com/2013/08/lemon-ricotta-blueberry-muffins-45.jpg">
          <span class="card-title">Muffins cu afine</span>
        </div>
        <div class="card-content">
