update muffin receipe

--- a/briose.html
+++ b/briose.html
@@ -44,26 +44,27 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
          <span class="card-title">Muffins cu afine</span>
        </div>
        <div class="card-content">
-         <p>Ingrediente:
+         <p>Ingrediente:</p>
 
--230 gr faina
+<p>-230 gr faina</p>
 
--230 gr zahar
--1 varf cutit sare
-2 lingurite praf de copt
-3 oua
-200 ml lapte batut
-100 gr unt
-1 esenta vanilie
-250 gr afine
-inca putin unt topit pentru uns formele
-Bucati: 14
-Preparare
-Muffins cu afine
-Topim untul si il lasam sa se raceasca.
-Amestecam faina, zaharul, sarea si praful de copt.
-Batem cu mixerul iaurtul, ouale, vanilia si untul topit (racit obligatoriu altfel faceti omleta!).
-Turnam amestecul de faina si zahar (de la pct. 2) peste cel de oua si iaurt (de la pct. 3) si continuam sa mixam inca 2 minute.
+<p>-230 gr zahar</p>
+<p>-1 varf cutit sare</p>
+<p>-2 lingurite praf de copt</p>
+<p>-3 oua</p>
+<p>-200 ml lapte batut</p>
+<p>-100 gr unt</p>
+<p>-1 esenta vanilie</p>
+<p>-250 gr afine</p>
+<p>-inca putin unt topit pentru uns formele</p>
+
+<p>Preparare:</p>
+
+<p>Muffins cu afine</p>
+<p>Topim untul si il lasam sa se raceasca.</p>
+<p>Amestecam faina, zaharul, sarea si praful de copt.</p>
+<p>Batem cu mixerul iaurtul, ouale, vanilia si untul topit (racit obligatoriu altfel faceti omleta!).</p>
+<p>Turnam amestecul de faina si zahar (de la pct. 2) peste cel de oua si iaurt (de la pct. 3) si continuam sa mixam inca 2 minute.
 Incorporam in aluat afinele (pe care le scurgeti bine de apa dupa ce le-ati spalat, le puteti absorbi si cu un servetel sa fiti siguri!).
 *mie mi s-au cam dus la fund afinele, ca sa impiedicati asta dati-le inainte de a le amesteca in prin putina faina.
 In tava de muffins aseazam forme de muffins de hartie si le ungem cu fff putin unt topit. Turnam in fiecare forma aluat.
