--- a/briose.html
+++ b/briose.html
@@ -44,7 +44,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
          <span class="card-title">Muffins cu afine</span>
        </div>
        <div class="card-content">
-         <p>        Ingrediente:  </p>
+        <h2> <p>        Ingrediente:  </p></h2>
 <p> </p>
 <p> - 230 gr faina</p>
 <p> - 230 gr zahar</p>
