--- a/briose.html
+++ b/briose.html
@@ -41,10 +41,10 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
      <div class="card">
        <div class="card-image">
          <img src="https://bananachocolate.files.wordpress.com/2013/08/lemon-ricotta-blueberry-muffins-45.jpg">
-         <span class="card-title">Muffins cu afine</span>
+      <h2>   <span class="card-title">Muffins cu afine</span> </h2>
        </div>
        <div class="card-content">
-        <h2> <p>        Ingrediente:  </p></h2>
+         <p>        Ingrediente:  </p>
 <p> </p>
 <p> - 230 gr faina</p>
 <p> - 230 gr zahar</p>
