update muffin receipe

--- a/briose.html
+++ b/briose.html
@@ -61,10 +61,10 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
          <div id="preparare">
 
 
-      1<script>
-      var ingrediente = ['  Topim untul si il lasam sa se raceasca.','  Amestecam faina, zaharul, sarea si praful de copt.','  Batem cu mixerul iaurtul, ouale, vanilia si untul topit (racit obligatoriu altfel faceti omleta!).',
-    '  Turnam amestecul de faina si zahar (de la pct. 2) peste cel de oua si iaurt (de la pct. 3) si continuam sa mixam inca 2 minute','  Incorporam in aluat afinele (pe care le scurgeti bine de apa dupa ce le-ati spalat, le puteti absorbi si cu un servetel sa fiti siguri!). (mie mi s-au cam dus la fund afinele, ca sa impiedicati asta dati-le inainte de a le amesteca in prin putina faina.)',
-    'In tava de muffins aseazam forme de muffins de hartie si le ungem cu fff putin unt topit. Turnam in fiecare forma aluat.','Dam la cuptor la 180C pentru 25 minute. Lasam sa se racoreasca si apoi le scoatem din forme.',];
+      <script>
+      var ingrediente = ['  1. Topim untul si il lasam sa se raceasca.','  2. Amestecam faina, zaharul, sarea si praful de copt.','  3. Batem cu mixerul iaurtul, ouale, vanilia si untul topit (racit obligatoriu altfel faceti omleta!).',
+    '  4. Turnam amestecul de faina si zahar (de la pct. 2) peste cel de oua si iaurt (de la pct. 3) si continuam sa mixam inca 2 minute',' 5. Incorporam in aluat afinele (pe care le scurgeti bine de apa dupa ce le-ati spalat, le puteti absorbi si cu un servetel sa fiti siguri!). (mie mi s-au cam dus la fund afinele, ca sa impiedicati asta dati-le inainte de a le amesteca in prin putina faina.)',
+    '6. In tava de muffins aseazam forme de muffins de hartie si le ungem cu fff putin unt topit. Turnam in fiecare forma aluat.','7.Dam la cuptor la 180C pentru 25 minute. Lasam sa se racoreasca si apoi le scoatem din forme.',];
         for(var i in ingrediente){
           var x = document.getElementById('divi');
           document.write('<p>' + ingrediente[i] + '</p>');
