--- a/deserturi.html
+++ b/deserturi.html
@@ -49,8 +49,8 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
 </nav>
   <ul class="collection">
     <li class="collection-item avatar">
-      <img src="images/yuna.jpg" alt="" class="circle">
-      <span class="title">Title</span>
+      <img src="https://www.google.ro/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjzvp7npqXPAhUMExoKHaiQCzQQjRwIBw&url=http%3A%2F%2Fwww.shogunofdelmar.com%2Fblog%2F2009%2F05%2F11%2Fshoguns-dessert-green-tea-cheesecake%2F&bvm=bv.133700528,d.d2s&psig=AFQjCNG0zrOxUPvjh89lDxFMjqprvY4j3A&ust=1474713670403908" alt="" class="circle">
+      <span class="title">Cheesecake</span>
       <p>First Line <br>
          Second Line
       </p>
@@ -58,7 +58,8 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle">folder</i>
-      <span class="title">Title</span>
+      <img src="https://www.google.ro/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjL0If1paXPAhXDnBoKHQCQDQcQjRwIBw&url=https%3A%2F%2Fbananachocolate.wordpress.com%2F2013%2F08%2F30%2Fbriose-cu-urda-lamaie-si-afine-also-in-english%2F&bvm=bv.133700528,d.d2s&psig=AFQjCNEADcRwXxIN1T1LnK-YnIFCjV2AXQ&ust=1474713466801216" alt="" class="circle">
+      <span class="title">Briose cu afine</span>
       <p>First Line <br>
          Second Line
       </p>
