update piure receipe

--- a/pireucartofi.html
+++ b/pireucartofi.html
@@ -41,12 +41,27 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
    <div class="col s12 m7">
      <div class="card">
        <div class="card-image">
-         <img src="images/sample-1.jpg">
+         <img src="https://www.google.ro/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjFosr9qKXPAhUIchQKHb_8Aj0QjRwIBw&url=https%3A%2F%2Fmagieinfarfurie.wordpress.com%2F2013%2F01%2F10%2Fmuschi-de-vita-cu-piure-de-cartofi-si-rosii-uscate%2F&bvm=bv.133700528,d.d2s&psig=AFQjCNEf07f5m82Cu0zXSChbLmb9_MrR7g&ust=1474714245764901">
          <span class="card-title">Piure de cartofi</span>
        </div>
        <div class="card-content">
-         <p>I am a very simple card. I am good at containing small bits of information.
-         I am convenient because I require little markup to use effectively.</p>
+
+         <script>
+         var ingrediente = ['Ingrediente : ', ' - 600 gr cartofi fainosi (pentru piure sau copt)', ' - 200 gr unt nesarat', ' - 250 ml lapte fierbinte', '  - sare', ' ',' ', 'Mod de preparare:',
+         '    1. Se fierb cartofii in coaja pana furculita intra usor in ei. Se scurg si se curata imediat, asa fierbinti (tineti cartoful intr-un prosop si cu lama unui cutiti curatati coaja).',
+          '    2. Se trec cartofii fierbinti printr-o presa de piure. Se pun intr-o tigaie larga. Se pune tigaia pe foc mic si se amesteca in cartofii striviti timp de 5 minute, sa se evapore lichidul din ei.',
+           '   3. Se adauga untul taiat cubulete mici, pe rand. Amestecati dupa fiecare transa pana untul e topit.',
+            '     4. Adaugati laptele fierbinte si amestecati cu un tel sa se aereze piureul. Va rezulta un piure cremos. Adaugati sare dupa gust.',
+          '     5. Treceti piureul printr-o sita fina (cate 1-2 linguri pe rand) ca sa iasa mai fin si mai pufos.',
+          '     6. Piureul se serveste imediat in cantitati mici (eventual stropit cu ulei de trufe). Daca nu-l serviti imediat, se acopera cu folie de plastic, apoi se pune un capac pe oala. Se pastreaza pe abur timp de 1 ora.'];
+           for(var i in ingrediente){
+             var x = document.getElementById('divi');
+             document.write('<p>' + ingrediente[i] + '</p>');
+           }
+         </script>
+         <div id = "divi"> </div>
+
+
        </div>
        <div class="card-action">
          <a href="#">This is a link</a>
