--- a/pireucartofi.html
+++ b/pireucartofi.html
@@ -41,7 +41,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
    <div class="col s12 m7">
      <div class="card">
        <div class="card-image">
-         <img src="https://www.google.ro/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwiaq7S6qaXPAhXIvhQKHUoXASoQjRwIBw&url=https%3A%2F%2Fmagieinfarfurie.wordpress.com%2F2013%2F01%2F10%2Fmuschi-de-vita-cu-piure-de-cartofi-si-rosii-uscate%2F&bvm=bv.133700528,d.d2s&psig=AFQjCNEf07f5m82Cu0zXSChbLmb9_MrR7g&ust=1474714245764901">
+         <img src="https://magieinfarfurie.files.wordpress.com/2013/01/dsc_4076.jpg">
          <span class="card-title"><h2>Piure de cartofi</h2></span>
        </div>
        <div class="card-content">
