--- a/garnituri.html
+++ b/garnituri.html
@@ -50,14 +50,14 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
   <ul class="collection">
     <li class="collection-item avatar">
       <img src="images/yuna.jpg" alt="" class="circle">
-      <span class="title">cartofimenta</span>
+      <span class="title">Cartofi la cuptor</span>
       <p>First Line <br>
          Second Line
       </p>
       <a href="caroficumenta.html" class="secondary-content"><i class="material-icons">grade</i></a>
     </li>
     <li class="collection-item avatar">
-    
+
       <i class="material-icons circle">folder</i>
       <span class="title">Piure de Cartofi</span>
       <p>First Line <br>
