update title muffins+picture

--- a/deserturi.html
+++ b/deserturi.html
@@ -58,8 +58,8 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle">folder</i>
-
-      <span class="title">Briose cu afine</span>
+      <img src="https://bananachocolate.files.wordpress.com/2013/08/lemon-ricotta-blueberry-muffins-45.jpg" alt="" class="circl
+      <span class="title">Muffins cu afine</span>
       <p>First Line <br>
          Second Line
       </p>
