--- a/deserturi.html
+++ b/deserturi.html
@@ -58,7 +58,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle">folder</i>
-      <img src="https://bananachocolate.files.wordpress.com/2013/08/lemon-ricotta-blueberry-muffins-45.jpg" alt="" class="circl
+      <img src="https://bananachocolate.files.wordpress.com/2013/08/lemon-ricotta-blueberry-muffins-45.jpg" alt="" class="circle">
       <span class="title">Muffins cu afine</span>
       <p>First Line <br>
          Second Line
