--- a/garnituri.html
+++ b/garnituri.html
@@ -49,7 +49,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
 </nav>
   <ul class="collection">
     <li class="collection-item avatar">
-      <img src="images/yuna.jpg" alt="" class="circle">
+      <img src="http://pizzacolosseum.ro/wgs/module/produse/files/cartofi%20chips1459424067.jpg" alt="" class="circle">
       <span class="title">Cartofi la cuptor</span>
       <p>First Line <br>
          Second Line
@@ -57,7 +57,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
       <a href="caroficumenta.html" class="secondary-content"><i class="material-icons">grade</i></a>
     </li>
     <li class="collection-item avatar">
-
+      <img src="https://magieinfarfurie.files.wordpress.com/2013/01/dsc_4075.jpg" alt="" class="circle">
       <i class="material-icons circle">folder</i>
       <span class="title">Piure de Cartofi</span>
       <p>First Line <br>
