--- a/caroficumenta.html
+++ b/caroficumenta.html
@@ -42,7 +42,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
      <div class="card">
        <div class="card-image">
          <img src="http://pizzacolosseum.ro/wgs/module/produse/files/cartofi%20chips1459424067.jpg">
-         <span class="card-title">Cartofi la Cuptor</span>
+         <span class="card-title"><h2>Cartofi la Cuptor</h2></span>
        </div>
        <div class="card-content">
 
