update cheesecake title

--- a/cheesecake.html
+++ b/cheesecake.html
@@ -42,7 +42,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
      <div class="card">
        <div class="card-image">
          <img src="http://www.e-retete.ro/imagini/retete/cheesecake-cu-ciocolata.jpg">
-         <span class="card-title">Card Title</span>
+         <span class="card-title"><h2>Cheesecake</h2></span>
        </div>
        <div class="card-content">
          <p>I am a very simple card. I am good at containing small bits of information.
