update index subtitle

--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
     <li class="collection-item avatar">
       <img src="images/yuna.jpg" alt="" class="circle">
       <span class="title">Supe</span>
-      <p>First Line <br>
-         Second Line
+      <p> Supă de Găluşte <br>
+          Supă de Roşii
       </p>
       <a href="supe.html" class="secondary-content"><i class="material-icons">grade</i></a>
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle">folder</i>
       <span class="title">Deserturi</span>
-      <p>First Line <br>
-         Second Line
+      <p> Cheesecake <br>
+          Muffins cu Afine
       </p>
       <a href="deserturi.html" class="secondary-content"><i class="material-icons">grade</i></a>
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle green">insert_chart</i>
       <span class="title">Garnituri</span>
-      <p>First Line <br>
-         Second Line
+      <p> Cartofi la Cuptor <br>
+          Piure de Cartofi
       </p>
       <a href="garnituri.html" class="secondary-content"><i class="material-icons">grade</i></a>
     </li>
