update muffin title

--- a/deserturi.html
+++ b/deserturi.html
@@ -59,7 +59,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
     <li class="collection-item avatar">
       <i class="material-icons circle">folder</i>
       <img src="https://bananachocolate.files.wordpress.com/2013/08/lemon-ricotta-blueberry-muffins-45.jpg" alt="" class="circle">
-      <span class="title">Muffins cu afine</span>
+      <span class="title">Muffins cu Afine</span>
       <p>First Line <br>
          Second Line
       </p>
