update muffin title

--- a/briose.html
+++ b/briose.html
@@ -41,7 +41,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
      <div class="card">
        <div class="card-image">
          <img src="https://bananachocolate.files.wordpress.com/2013/08/lemon-ricotta-blueberry-muffins-45.jpg">
-         <span class="card-title"><h2>Muffins cu afine</h2</span>
+         <span class="card-title"><h2>Muffins cu Afine</h2</span>
        </div>
        <div class="card-content">
 
