update piure title

--- a/pireucartofi.html
+++ b/pireucartofi.html
@@ -42,7 +42,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
      <div class="card">
        <div class="card-image">
          <img src="https://magieinfarfurie.files.wordpress.com/2013/01/dsc_4075.jpg">
-         <span class="card-title"><h2>Piure de cartofi</h2></span>
+         <span class="card-title"><h2>Piure de Cartofi</h2></span>
        </div>
        <div class="card-content">
 
