--- a/garnituri.html
+++ b/garnituri.html
@@ -50,7 +50,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
   <ul class="collection">
     <li class="collection-item avatar">
       <img src="http://pizzacolosseum.ro/wgs/module/produse/files/cartofi%20chips1459424067.jpg" alt="" class="circle">
-      <span class="title">Cartofi la cuptor</span>
+      <span class="title">Cartofi la Cuptor</span>
       <p>First Line <br>
          Second Line
       </p>
