updated index photos

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle">folder</i>
+      <img src="images/yuna.jpg" alt="" class="circle">
       <span class="title">Deserturi</span>
       <p> Cheesecake <br>
           Muffins cu Afine
@@ -67,6 +68,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle green">insert_chart</i>
+      <img src="images/yuna.jpg" alt="" class="circle">
       <span class="title">Garnituri</span>
       <p> Cartofi la Cuptor <br>
           Piure de Cartofi
