--- a/caroficumenta.html
+++ b/caroficumenta.html
@@ -36,7 +36,17 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
       <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   </head>
   <body>
-
+    <nav>
+    <div class="nav-wrapper">
+      <a href="index.html" class="brand-logo"><i class="material-icons">local_dining</i>Logo</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="garnituri.html"><i class="material-icons">undo</i></a></li>
+        <li><a href="index.html"><i class="material-icons">view_module</i></a></li>
+        <li><a href="https://github.com/AvramPop/food"><i class="material-icons">settings</i></a></li>
+        <li><a href="https://ro.wikipedia.org/wiki/Pagina_principal%C4%83"><i class="material-icons">help</i></a></li>
+      </ul>
+    </div>
+    </nav>
 <div class="row">
    <div class="col s12 m7">
      <div class="card">
@@ -64,7 +74,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
 
        </div>
        <div class="card-action">
-         <a href="#">This is a link</a>
+         <a href="index.html">Back to home</a>
        </div>
      </div>
    </div>
