--- a/index.html
+++ b/index.html
@@ -38,12 +38,10 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
   <body>
     <nav>
   <div class="nav-wrapper">
-    <a href="#!" class="brand-logo"><i class="material-icons">cloud</i>Logo</a>
+    <a href="index.html" class="brand-logo"><i class="material-icons">local_dining</i>Logo</a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="sass.html"><i class="material-icons">search</i></a></li>
-      <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
-      <li><a href="collapsible.html"><i class="material-icons">refresh</i></a></li>
-      <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
+      <li><a href="https://github.com/AvramPop/food"><i class="material-icons">settings</i></a></li>
+      <li><a href="https://ro.wikipedia.org/wiki/Pagina_principal%C4%83"><i class="material-icons">help</i></a></li>
     </ul>
   </div>
 </nav>
@@ -51,29 +49,29 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
   <ul class="collection">
     <li class="collection-item avatar">
       <img src="images/yuna.jpg" alt="" class="circle">
-      <span class="title">Supe</span>
+      <span class="title"><b>Supe</b></span>
       <p> Supă de Găluşte <br>
           Supă de Roşii
       </p>
-      <a href="supe.html" class="secondary-content"><i class="material-icons">grade</i></a>
+      <a href="supe.html" class="secondary-content"><i class="material-icons">forward</i></a>
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle">folder</i>
       <img src="images/yuna.jpg" alt="" class="circle">
-      <span class="title">Deserturi</span>
+      <span class="title"><b>Deserturi</b></span>
       <p> Cheesecake <br>
           Muffins cu Afine
       </p>
-      <a href="deserturi.html" class="secondary-content"><i class="material-icons">grade</i></a>
+      <a href="deserturi.html" class="secondary-content"><i class="material-icons">forward</i></a>
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle green">insert_chart</i>
       <img src="images/yuna.jpg" alt="" class="circle">
-      <span class="title">Garnituri</span>
+      <span class="title"><b>Garnituri</b></span>
       <p> Cartofi la Cuptor <br>
           Piure de Cartofi
       </p>
-      <a href="garnituri.html" class="secondary-content"><i class="material-icons">grade</i></a>
+      <a href="garnituri.html" class="secondary-content"><i class="material-icons">forward</i></a>
     </li>
   </ul>
 </div>
