--- a/supe.html
+++ b/supe.html
@@ -77,12 +77,11 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
   <body>
     <nav>
   <div class="nav-wrapper">
-    <a href="#!" class="brand-logo"><i class="material-icons">cloud</i>Logo</a>
+    <a href="index.html" class="brand-logo"><i class="material-icons">local_dining</i>Logo</a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="sass.html"><i class="material-icons">search</i></a></li>
-      <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
-      <li><a href="collapsible.html"><i class="material-icons">refresh</i></a></li>
-      <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
+      <li><a href="index.html"><i class="material-icons">undo</i></a></li>
+      <li><a href="https://github.com/AvramPop/food"><i class="material-icons">settings</i></a></li>
+      <li><a href="https://ro.wikipedia.org/wiki/Pagina_principal%C4%83"><i class="material-icons">help</i></a></li>
     </ul>
   </div>
 </nav>
@@ -93,7 +92,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
       <p>First Line <br>
          Second Line
       </p>
-      <a href="supagaluste.html" class="secondary-content"><i class="material-icons">grade</i></a>
+      <a href="supagaluste.html" class="secondary-content"><i class="material-icons">forward</i></a>
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle">folder</i>
@@ -102,7 +101,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
       <p>First Line <br>
          Second Line
       </p>
-      <a href="supaderosi.html" class="secondary-content"><i class="material-icons">grade</i></a>
+      <a href="supaderosi.html" class="secondary-content"><i class="material-icons">forward</i></a>
     </li>
 
   </ul>
