--- a/supagaluste.html
+++ b/supagaluste.html
@@ -59,7 +59,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
          I am convenient because I require little markup to use effectively.</p>
        </div>
        <div class="card-action">
-         <a href="index.html">Back to home</a>
+         <a href="index.html">Find more!</a>
        </div>
      </div>
    </div>
