--- a/cheesecake.html
+++ b/cheesecake.html
@@ -51,12 +51,34 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
    <div class="col s12 m7">
      <div class="card">
        <div class="card-image">
-         <img src="http://www.e-retete.ro/imagini/retete/cheesecake-cu-ciocolata.jpg">
+         <img src="https://bananachocolate.files.wordpress.com/2013/07/white-chocolate-cheesecake-141.jpg">
          <span class="card-title"><h2>Cheesecake</h2></span>
        </div>
        <div class="card-content">
-         <p>I am a very simple card. I am good at containing small bits of information.
-         I am convenient because I require little markup to use effectively.</p>
+         <script>
+
+var ingrediente = ['- 900 gr crema de branza (tip philadelphia)', '- 1/2 baton vanilie','- 200 gr zahar', ' - 100 gr smantana acra','- 4 oua', '- 80 gr ciocolata neagra (75 %)',
+   '- 1 priza scortisoara', '- 200 gr biscuiti cu cacao (am folosit Belvita Start cu ciocolata)',' - 90 gr unt', ' Mod de Preparare: ',
+   ' 1. Se maruntesc biscuitii in robot sau masina de cafea. Se adauga untul topit si scortisoara si se amesteca bine pana biscuitii sunt umezi.',
+   ' 2. Se tapeteaza fundul unei tavi cu pereti detasabili (diametru 26 cm; cu hartie de copt pe fund) cu biscuiti (apasati usor pe margini sa se formeze o mica bordura). Se da tava la rece pana pregatim umplutura.',
+    '3. Se freaca branza un pic pana se inmoaie. Se adauga zaharul si miezul de la batonul de vanilie (sau zahar vanilat; sau esenta de vanilie) si se mai amesteca inca 2-3 minute. Se adauga smantana.',
+   '4. Se adauga apoi cate un ou pe rand pana sunt complet incorporate.',
+   ' 5. Se toarna 2/3 din amestec in tava, peste crusta de biscuiti. Se loveste usor tava de masa ca sa se aseze uniform umplutura.',
+    ' 6. Se topeste pe abur (sau in microunde) ciocolata. Se adauga restul de umplutura in ciocolata (la inceput puneti putina umplutura si amestecati bine, apoi dupa ce ati adaugat 2-3 linguri puteti sa o adaugati pe toata o data). Omogenizati, adaugand si scortisoara.',
+  '7. Puneti umplutura cu ciocolata intr-un spritz de patiserie la care montati un varf rotund si destul de subtire.',
+   '8. Introduceti usor varful in umplutura (cativa mm) si strangeti pana vedeti ca la suprafata s-a format un cerc cam cat o moneda de 10 bani. Continuati sa formati buline pe toata suprafata cheesecake-ului. ',
+   ' 9. Dati tava la cuptor, la 150C. In cuptor, cand il incalziti, chiar jos asezati o tava cu apa (ca sa se faca aburi). Coaceti cheesecakeul timp de 1 ora.',
+   ' 10. Stingeti focul si lasati-l sa se raceasca in cuptor.',
+          '11. Introduceti-l la frigider si lasati-l peste noapte.','12. Se feliaza usor cu un cutit trecut prin apa fierbinte.'];
+  for(var i in ingrediente){
+    var x = document.getElementById('divi');
+    document.write('<p>' + ingrediente[i] + '</p>');
+  }
+</script>
+<div id = "divi"> </div>
+<div id="divi">
+
+
        </div>
        <div class="card-action">
          <a href="index.html">Find more!</a>
