--- a/cheesecake.html
+++ b/cheesecake.html
@@ -57,7 +57,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
        <div class="card-content">
          <script>
 
-var ingrediente = ['- 900 gr crema de branza (tip philadelphia)', '- 1/2 baton vanilie','- 200 gr zahar', ' - 100 gr smantana acra','- 4 oua', '- 80 gr ciocolata neagra (75 %)',
+var ingrediente = ['Ingrediente: ','- 900 gr crema de branza (tip philadelphia)', '- 1/2 baton vanilie','- 200 gr zahar', ' - 100 gr smantana acra','- 4 oua', '- 80 gr ciocolata neagra (75 %)',
    '- 1 priza scortisoara', '- 200 gr biscuiti cu cacao (am folosit Belvita Start cu ciocolata)',' - 90 gr unt', ' Mod de Preparare: ',
    ' 1. Se maruntesc biscuitii in robot sau masina de cafea. Se adauga untul topit si scortisoara si se amesteca bine pana biscuitii sunt umezi.',
    ' 2. Se tapeteaza fundul unei tavi cu pereti detasabili (diametru 26 cm; cu hartie de copt pe fund) cu biscuiti (apasati usor pe margini sa se formeze o mica bordura). Se da tava la rece pana pregatim umplutura.',
