--- a/deserturi.html
+++ b/deserturi.html
@@ -48,20 +48,16 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
 </nav>
   <ul class="collection">
     <li class="collection-item avatar">
-      <img src="images/yuna.jpg" alt="" class="circle">
-      <span class="title">Cheesecake</span>
-      <p>First Line <br>
-         Second Line
-      </p>
+      <img src="https://bananachocolate.files.wordpress.com/2013/07/white-chocolate-cheesecake-141.jpg" alt="" class="circle">
+      <span class="title"><h1>Cheesecake</h1></span>
+
       <a href="cheesecake.html" class="secondary-content"><i class="material-icons">forward</i></a>
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle">folder</i>
       <img src="https://bananachocolate.files.wordpress.com/2013/08/lemon-ricotta-blueberry-muffins-45.jpg" alt="" class="circle">
-      <span class="title">Muffins cu Afine</span>
-      <p>First Line <br>
-         Second Line
-      </p>
+      <span class="title"><h1>Muffins cu Afine</h1></span>
+
       <a href="briose.html" class="secondary-content"><i class="material-icons">forward</i></a>
     </li>
   </ul>
