--- a/deserturi.html
+++ b/deserturi.html
@@ -49,14 +49,14 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
   <ul class="collection">
     <li class="collection-item avatar">
       <img src="https://bananachocolate.files.wordpress.com/2013/07/white-chocolate-cheesecake-141.jpg" alt="" class="circle">
-      <span class="title"><h1>Cheesecake</h1></span>
+      <span class="title">Cheesecake</span>
 
       <a href="cheesecake.html" class="secondary-content"><i class="material-icons">forward</i></a>
     </li>
     <li class="collection-item avatar">
       <i class="material-icons circle">folder</i>
       <img src="https://bananachocolate.files.wordpress.com/2013/08/lemon-ricotta-blueberry-muffins-45.jpg" alt="" class="circle">
-      <span class="title"><h1>Muffins cu Afine</h1></span>
+      <span class="title">Muffins cu Afine</span>
 
       <a href="briose.html" class="secondary-content"><i class="material-icons">forward</i></a>
     </li>
