--- a/supagaluste.html
+++ b/supagaluste.html
@@ -56,7 +56,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
        </div>
        <div class="card-content">
          <script>
-var ingrediente = ['Ingrediente: ','-2 oua', '-7-8 linguri gris', '-1 lingurita ulei', '-sare', 'Mod de Preparare',
+var ingrediente = ['Ingrediente: ','-2 oua', '-7-8 linguri gris', '-1 lingurita ulei', '-sare', 'Mod de Preparare: ',
  ' 1. Am pus suma de pui pe foc sa fiarba.',
   '2. Am preparat galustele: am batut ouale cu sare si ulei. Am adaugat apoi grisul in ploaie, cate o lingura pe rand, amestecand dupa fiecare pana am obtinut consistenta dorita.* stiti ca aluatul are consistenta dorita atunci cand treceti cu furculita prin el si darele raman vizibile. Faceti acest test dupa fiecare lingura de gris fiindca si daca puneti prea mult nu e bine, galustele vor iesi tari. Vezi in poza cam cum trebuie sa arate aluatul, moale dar totusi sa nu curga de pe lingurita.',
    '3. Dati focul pe mic sub oala cu supa astfel inca aceasta sa nu clocoteasca, altfel galustele s-ar imprastia.',
