--- a/supagaluste.html
+++ b/supagaluste.html
@@ -69,7 +69,7 @@ var ingrediente = ['Ingrediente: ','-2 oua', '-7-8 linguri gris', '-1 lingurita 
   }
 </script>
 <div id = "divi"> </div>
-
+<div id="divi">
 
 -2 oua
 -7-8 linguri gris
