--- a/supagaluste.html
+++ b/supagaluste.html
@@ -71,17 +71,8 @@ var ingrediente = ['Ingrediente: ','-2 oua','-7-8 linguri gris','-1 lingurita ul
 <div id = "divi"> </div>
 <div id="divi">
 
-
-
-
-
-
-
-
-
-
        <div class="card-action">
-         <a href="index.html">Find more!</a>
+         <a href="http://www.jamilacuisine.ro/supa-de-pui-cu-galuste-reteta-video/">Find more!</a>
        </div>
      </div>
    </div>
