--- a/supaderosi.html
+++ b/supaderosi.html
@@ -81,7 +81,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
 
        </div>
        <div class="card-action">
-         <a href="index.html">Find more!</a>
+         <a href="http://www.jamilacuisine.ro/supa-de-rosii-cu-ardei-copt-reteta-video/">Find more!</a>
        </div>
      </div>
    </div>
