--- a/cheesecake.html
+++ b/cheesecake.html
@@ -81,7 +81,7 @@ var ingrediente = ['Ingrediente: ','- 900 gr crema de branza (tip philadelphia)'
 
        </div>
        <div class="card-action">
-         <a href="index.html">Find more!</a>
+         <a href="http://www.jamilacuisine.ro/cheesecake-fara-coacere-reteta-video/">Find more!</a>
        </div>
      </div>
    </div>
