--- a/caroficumenta.html
+++ b/caroficumenta.html
@@ -74,7 +74,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
 
        </div>
        <div class="card-action">
-         <a href="index.html">Find more!</a>
+         <a href="http://www.jamilacuisine.ro/cartofi-acordeon-la-cuptor-reteta-video/">Find more!</a>
        </div>
      </div>
    </div>
