--- a/briose.html
+++ b/briose.html
@@ -84,7 +84,7 @@ Search for the text "TODO" in this HTML file, to know what changes you should ma
 
        </div>
        <div class="card-action">
-         <a href="index.html">Find more!</a>
+         <a href="http://www.jamilacuisine.ro/briose-cu-fulgi-de-ciocolata-reteta-video/">Find more!</a>
        </div>
      </div>
    </div>
